# example-boost-te

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: add.cpp.E3971CA6CC36B35F.idx  add.h.859AA101D3F7E0AA.idx  add_test.cpp.C20324778106755B.idx
include/boost/: te.hpp
src/: CMakeLists.txt  add.cpp  add.h  erase-it.cpp  erase-it.h
test/: CMakeLists.txt  erase-it_test.cpp
tool/cmake/: create_symlink_to_build.cmake  install_gtest.cmake  set_compile_props.cmake
